--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.react-multiple-carousel__arrow--right {
+  right: 0 !important;
+  min-width: 35px !important;
+  min-height: 35px !important;
+}
+
+.react-multiple-carousel__arrow--left {
+  left: 0 !important;
+  min-width: 35px !important;
+  min-height: 35px !important;
+}
