--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,16 @@
   min-width: 35px !important;
   min-height: 35px !important;
 }
+
+.customScrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.customScrollbar::-webkit-scrollbar-thumb {
+  background-color: #979b9c;
+  border-radius: 4px;
+}
+
+.customScrollbar::-webkit-scrollbar-track {
+  background-color: #CBD5E0;
+}
